--- a/public/layout/styles/main_styles.css
+++ b/public/layout/styles/main_styles.css
@@ -55,7 +55,7 @@
 }
 body
 {
-	font-family: 'Rubik', sans-serif;
+	font-family: 'Prompt', sans-serif;
 	font-size: 14px;
 	font-weight: 400;
 	background: #FFFFFF;
@@ -76,7 +76,7 @@ ul
 }
 p
 {
-	font-family: 'Rubik', sans-serif;
+	font-family: 'Prompt', sans-serif;
 	font-size: 14px;
 	line-height: 1.7;
 	font-weight: 400;
@@ -133,7 +133,7 @@ h4{font-size: 18px;}
 h5{font-size: 14px;}
 h1, h2, h3, h4, h5, h6
 {
-	font-family: 'Rubik', sans-serif;
+	font-family: 'Prompt', sans-serif;
 	font-weight: 500;
 	-webkit-font-smoothing: antialiased;
 	-webkit-text-shadow: rgba(0,0,0,.01) 0 0 1px;
@@ -1242,7 +1242,7 @@ select option
 }
 .banner_text
 {
-	font-family: 'Montserrat', sans-serif;
+	font-family: 'Prompt', sans-serif;
 	font-weight: 500;
 	line-height: 1.166;
 	color: #7599b2;
