--- a/public/css/addPord_excel.css
+++ b/public/css/addPord_excel.css
@@ -10,7 +10,8 @@
   width:100%;
   height:340px; 
   object-fit: contain; 
-  object-position: right;}
+  object-position: right;
+}
 .box8 .box-content{
   width:100%;
   height:100%;
