--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,34 +9,84 @@
  *   version 2.4
  *
  */
+
+  .md-form {
+    position: relative;
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+  }
+  .md-form .prefix {
+    position: absolute;
+    -webkit-transition: color .2s;
+    -o-transition: color .2s;
+    transition: color .2s;
+}
+  .md-form .prefix .active {
+    color: #4285f4;
+}
+.md-form .prefix {
+    top: .25rem;
+    font-size: 1.75rem;
+}
+.grey-text {
+    color: #9e9e9e!important;
+}
+.md-form .prefix~input, .md-form .prefix~textarea {
+    margin-left: 2.5rem;
+    width: calc(100% - 2.5rem);
+}
+.md-form .prefix~label {
+    margin-left: 2.5rem;
+}
+
+.md-form input[type=date], .md-form input[type=datetime-local], .md-form input[type=email], .md-form input[type=number], .md-form input[type=password], .md-form input[type=search-md], .md-form input[type=search], .md-form input[type=tel], .md-form input[type=text], .md-form input[type=time], .md-form input[type=url], .md-form textarea.md-textarea {
+    -webkit-transition: border-color .15s ease-in-out,-webkit-box-shadow .15s ease-in-out;
+    transition: border-color .15s ease-in-out,-webkit-box-shadow .15s ease-in-out;
+    -o-transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out,-webkit-box-shadow .15s ease-in-out;
+    outline: 0;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    border: none;
+    border-bottom: 1px solid #ced4da;
+    -webkit-border-radius: 0;
+    border-radius: 0;
+    -webkit-box-sizing: content-box;
+    box-sizing: content-box;
+    background-color: transparent;
+}
+
+
+
  .cut-w{
-    font-size: 16px;
-    font-weight: 450;
-    color: #f59121;
-    margin: 2px 0 5px 0;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    -webkit-line-clamp: 2;
- }
+  font-size: 16px;
+  font-weight: 450;
+  color: #f59121;
+  margin: 2px 0 5px 0;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 2;
+}
 .prim{
   color: #1ab394;
 }
 .wh{
   color: white;
 }
- .ibox-m{
+.ibox-m{
   margin-left: 30px;
   margin-right: 30px;
 }
- .gird{
+.gird{
   display: grid;
- }
- .p25{
+}
+.p25{
   width: 27px;
   height: 35px;
- }
- .switch {
+}
+.switch {
   position: relative;
   display: inline-block;
   width: 50px;
@@ -810,6 +860,7 @@ body.canvas-menu.mini-navbar nav.navbar-static-side {
 }
 .btn {
   border-radius: 3px;
+  cursor: pointer;
 }
 .float-e-margins .btn {
   margin-bottom: 5px;
@@ -852,9 +903,9 @@ body.canvas-menu.mini-navbar nav.navbar-static-side {
 }
 
 .inline2{
-display: inline-flex;
-margin-right: 15px;
-position: relative;
+  display: inline-flex;
+  margin-right: 15px;
+  position: relative;
 
 }
 .btn-primary:hover,
@@ -3658,9 +3709,21 @@ video {
   z-index: 2050;
 }
 /* MODAL */
+.or{
+  color: #f5912191;
+}
+
+.btn-or {
+    background-color: #F59121;
+    border-color: #F59121;
+    color: #FFFFFF;
+}
 .modal-content {
   background-clip: padding-box;
-  background-color: #FFFFFF;
+  background-image: url("/css/patterns/excel-01.png");
+  background-color: #fff;
+  background-repeat: no-repeat;
+  background-position: right bottom;
   border: 1px solid rgba(0, 0, 0, 0);
   border-radius: 4px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
@@ -4346,12 +4409,7 @@ a.close-canvas-menu:hover {
   width: 240px;
   float: left;
 }
-.modal-backdrop {
-  z-index: 2040 !important;
-}
-.modal {
-  z-index: 2050 !important;
-}
+
 .spiner-example {
   height: 200px;
   padding-top: 70px;
@@ -5531,17 +5589,17 @@ del {
 
 }
 .cart-page-logo__page-name {
-    margin-left: .9375rem;
-    border-left: .0625rem solid #f59121;
-    color: #f59121;
-    font-size: 1.25rem;
+  margin-left: .9375rem;
+  border-left: .0625rem solid #f59121;
+  color: #f59121;
+  font-size: 1.25rem;
 
-    height: 1.875rem;
-    padding-left: .9375rem;
-    margin-bottom: .0625rem;
-    text-transform: capitalize;
-    margin-top: 45px;
-    }
+  height: 1.875rem;
+  padding-left: .9375rem;
+  margin-bottom: .0625rem;
+  text-transform: capitalize;
+  margin-top: 45px;
+}
 .product-box:hover,
 .product-box.active {
   border: 1px solid transparent;
@@ -5621,13 +5679,13 @@ table.shoping-cart-table tr td:last-child {
 }
 
 .product-name-a{
- 
+
   font-size: 16px;
   font-weight: 450;
   color: #f59121;
   margin: 2px 0 5px 0;
   overflow: hidden;
-    white-space: nowrap;
+  white-space: nowrap;
   text-overflow: ellipsis;
   -webkit-line-clamp: 2;
 }
@@ -5641,7 +5699,7 @@ table.shoping-cart-table tr td:last-child {
   font-weight: 450;
   margin: 2px 0 5px 0;
   overflow: hidden;
-    white-space: nowrap;
+  white-space: nowrap;
   text-overflow: ellipsis;
   -webkit-line-clamp: 2;
 }
