--- a/public/layout/styles/main_styles.css
+++ b/public/layout/styles/main_styles.css
@@ -389,7 +389,7 @@ section
 }
 .standard_dropdown li a:hover
 {
-	color: #0e8ce4;
+	color: #f59121;
 }
 .standard_dropdown li a i
 {
@@ -583,7 +583,7 @@ section
 {
 	display: block;
 	position: relative;
-	width: calc((100% ) * 0.601);
+	width: 100%;
 	height: 100%;
 	line-height: 50px;
 	border: none !important;
@@ -765,6 +765,18 @@ select option
 	cursor: pointer;
 	border-top-right-radius: 5px;
 	border-bottom-right-radius: 5px;
+}
+.header_search_button-xs
+{
+	position: absolute;
+	top: 0;
+	right: 0;
+	width: 50px;
+	height: 100%;
+	background: #F59121;
+	border: none;
+	outline: none;
+	cursor: pointer;
 }
 .wishlist_cart
 {
@@ -1179,10 +1191,7 @@ select option
 	margin-right: 40px;
 	color: #FFFFFF;
 }
-.menu_contact_item:not(:first-child)
-{
-	margin-right: 0px;
-}
+
 .menu_contact_item a
 {
 	font-size: 12px;
